--- a/app/globals.css
+++ b/app/globals.css
@@ -31,14 +31,31 @@ html:not([data-scroll="0"]) .navbar {
 }
 
 .banner-image {
-    background-image: url('/assets/banner/shapes.svg');
+    background-image: 
+      linear-gradient(to bottom, rgba(255, 255, 255, 0) 70%, white 100%), 
+      url('/assets/banner/music.jpg');
     background-repeat: no-repeat;
-    background-position: top;
-    background-size: contain;
-}
-
+    background-position: center center;
+    background-size: cover;
+    background-attachment: fixed; 
+    position: relative;
+    z-index: 1;
+  }
+  
+  .banner-image::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(156, 71, 71, 0.4);
+    z-index: -1; 
+  }
+  
+  
 hr {
-    border-color: rgba(196, 196, 196, 0.65);
+    border-color: rgba(255, 0, 0, 0.65);
 }
 
 .w-270 {
