--- a/app/globals.css
+++ b/app/globals.css
@@ -5,6 +5,10 @@
 @tailwind utilities;
 @import "slick-carousel/slick/slick.css";
 @import "slick-carousel/slick/slick-theme.css";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 
 body {
     font-family: 'Poppins', sans-serif;
@@ -108,3 +112,25 @@ hr {
 .space-links:hover {
     letter-spacing: 1px;
 }
+
+@layer utilities {
+    .custom-scrollbar::-webkit-scrollbar {
+      width: 8px;
+    }
+  
+    .custom-scrollbar::-webkit-scrollbar-thumb {
+      background-color: #888;
+      border-radius: 10px;
+    }
+  
+    .custom-scrollbar::-webkit-scrollbar-thumb:hover {
+      background-color: #555;
+    }
+  
+    /* For Firefox */
+    .custom-scrollbar {
+      scrollbar-width: thin;
+      scrollbar-color: #888 #555;
+    }
+  }
+  
